Only use GetCloseTabButtonColor() for pre-refresh touchable.

Bug: 868169
Change-Id: I9adeed2a4fd8d57d3ae26e7885f66eb3bcfcd85d
Reviewed-on: https://chromium-review.googlesource.com/1153581
Commit-Queue: Allen Bauer <kylixrd@chromium.org>
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578769}
Former-commit-id: ddfb2b7ee75c24b9105c953375405a66d1b64215